Ucpf.Grammar.Analyzer/Antlr2/NewANTLRv3Parser.cs
// $ANTLR 3.2 Sep 23, 2009 12:02:23 NewANTLRv3.g 2010-08-28 18:58:58

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


using System;
using System.Collections;
using Antlr.Runtime;
using Antlr.Runtime.Collections;
using Antlr.Runtime.Tree;

/** ANTLR v3 grammar written in ANTLR v3 with AST construction */
namespace Ucpf.Grammar.Analyzer.Antlr2
{
	public partial class NewANTLRv3Parser : Parser
	{
		public static readonly string[] tokenNames = new string[] 
		{
			"<invalid>", 
			"<EOR>", 
			"<DOWN>", 
			"<UP>", 
			"DOC_COMMENT", 
			"TOKENS", 
			"TOKEN_REF", 
			"STRING_LITERAL", 
			"CHAR_LITERAL", 
			"ACTION", 
			"OPTIONS", 
			"INT", 
			"ARG_ACTION", 
			"SEMPRED", 
			"RULE_REF", 
			"RANGE", 
			"DOUBLE_QUOTE_STRING_LITERAL", 
			"DOUBLE_ANGLE_STRING_LITERAL", 
			"SRC", 
			"SL_COMMENT", 
			"ML_COMMENT", 
			"LITERAL_CHAR", 
			"ESC", 
			"XDIGIT", 
			"NESTED_ARG_ACTION", 
			"ACTION_STRING_LITERAL", 
			"ACTION_CHAR_LITERAL", 
			"NESTED_ACTION", 
			"ACTION_ESC", 
			"WS_LOOP", 
			"WS", 
			"'lexer'", 
			"'parser'", 
			"'tree'", 
			"'grammar'", 
			"';'", 
			"'}'", 
			"'='", 
			"'scope'", 
			"'@'", 
			"'::'", 
			"'*'", 
			"'protected'", 
			"'public'", 
			"'private'", 
			"'fragment'", 
			"'!'", 
			"'returns'", 
			"':'", 
			"'throws'", 
			"','", 
			"'('", 
			"'|'", 
			"')'", 
			"'catch'", 
			"'finally'", 
			"'+='", 
			"'=>'", 
			"'^'", 
			"'~'", 
			"'^('", 
			"'?'", 
			"'+'", 
			"'.'", 
			"'->'", 
			"'$'"
		};

		public const int T__64 = 64;
		public const int NESTED_ACTION = 27;
		public const int T__65 = 65;
		public const int T__62 = 62;
		public const int T__63 = 63;
		public const int DOUBLE_ANGLE_STRING_LITERAL = 17;
		public const int ESC = 22;
		public const int T__61 = 61;
		public const int EOF = -1;
		public const int T__60 = 60;
		public const int SEMPRED = 13;
		public const int ACTION = 9;
		public const int TOKEN_REF = 6;
		public const int T__55 = 55;
		public const int ML_COMMENT = 20;
		public const int T__56 = 56;
		public const int T__57 = 57;
		public const int T__58 = 58;
		public const int T__51 = 51;
		public const int STRING_LITERAL = 7;
		public const int T__52 = 52;
		public const int T__53 = 53;
		public const int T__54 = 54;
		public const int T__59 = 59;
		public const int ARG_ACTION = 12;
		public const int DOC_COMMENT = 4;
		public const int DOUBLE_QUOTE_STRING_LITERAL = 16;
		public const int NESTED_ARG_ACTION = 24;
		public const int T__50 = 50;
		public const int ACTION_CHAR_LITERAL = 26;
		public const int T__42 = 42;
		public const int T__43 = 43;
		public const int T__40 = 40;
		public const int T__41 = 41;
		public const int T__46 = 46;
		public const int T__47 = 47;
		public const int T__44 = 44;
		public const int ACTION_ESC = 28;
		public const int T__45 = 45;
		public const int T__48 = 48;
		public const int T__49 = 49;
		public const int SRC = 18;
		public const int WS_LOOP = 29;
		public const int RANGE = 15;
		public const int TOKENS = 5;
		public const int LITERAL_CHAR = 21;
		public const int ACTION_STRING_LITERAL = 25;
		public const int INT = 11;
		public const int RULE_REF = 14;
		public const int T__31 = 31;
		public const int T__32 = 32;
		public const int WS = 30;
		public const int T__33 = 33;
		public const int T__34 = 34;
		public const int T__35 = 35;
		public const int T__36 = 36;
		public const int CHAR_LITERAL = 8;
		public const int T__37 = 37;
		public const int T__38 = 38;
		public const int T__39 = 39;
		public const int XDIGIT = 23;
		public const int SL_COMMENT = 19;
		public const int OPTIONS = 10;

		// delegates
		// delegators



		public NewANTLRv3Parser(ITokenStream input)
			: this(input, new RecognizerSharedState()) {
			}

		public NewANTLRv3Parser(ITokenStream input, RecognizerSharedState state)
			: base(input, state) {
			InitializeCyclicDFAs();

             
			}
        
		protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

		public ITreeAdaptor TreeAdaptor
		{
			get { return this.adaptor; }
			set {
				this.adaptor = value;
			}
		}

		override public string[] TokenNames {
			get { return NewANTLRv3Parser.tokenNames; }
		}

		override public string GrammarFileName {
			get { return "NewANTLRv3.g"; }
		}


		int gtype;


		public class grammarDef_return : ParserRuleReturnScope
		{
			private CommonTree tree;
			override public object Tree
			{
				get { return tree; }
				set { tree = (CommonTree) value; }
			}
		};

		// $ANTLR start "grammarDef"
		// NewANTLRv3.g:42:1: grammarDef : ( DOC_COMMENT )? ( 'lexer' | 'parser' | 'tree' | ) g= 'grammar' id ';' ( optionsSpec )? ( tokensSpec )? ( attrScope )* ( action )* ( rule )+ EOF ;
		public NewANTLRv3Parser.grammarDef_return grammarDef() // throws RecognitionException [1]
		{   
			NewANTLRv3Parser.grammarDef_return retval = new NewANTLRv3Parser.grammarDef_return();
			retval.Start = input.LT(1);

			CommonTree root_0 = null;

			IToken g = null;
			IToken DOC_COMMENT1 = null;
			IToken string_literal2 = null;
			IToken string_literal3 = null;
			IToken string_literal4 = null;
			IToken char_literal6 = null;
			IToken EOF12 = null;
			NewANTLRv3Parser.id_return id5 = default(NewANTLRv3Parser.id_return);

			NewANTLRv3Parser.optionsSpec_return optionsSpec7 = default(NewANTLRv3Parser.optionsSpec_return);

			NewANTLRv3Parser.tokensSpec_return tokensSpec8 = default(NewANTLRv3Parser.tokensSpec_return);

			NewANTLRv3Parser.attrScope_return attrScope9 = default(NewANTLRv3Parser.attrScope_return);

			NewANTLRv3Parser.action_return action10 = default(NewANTLRv3Parser.action_return);

			NewANTLRv3Parser.rule_return rule11 = default(NewANTLRv3Parser.rule_return);


			CommonTree g_tree=null;
			CommonTree DOC_COMMENT1_tree=null;
			CommonTree string_literal2_tree=null;
			CommonTree string_literal3_tree=null;
			CommonTree string_literal4_tree=null;
			CommonTree char_literal6_tree=null;
			CommonTree EOF12_tree=null;

			try 
			{
				// NewANTLRv3.g:43:5: ( ( DOC_COMMENT )? ( 'lexer' | 'parser' | 'tree' | ) g= 'grammar' id ';' ( optionsSpec )? ( tokensSpec )? ( attrScope )* ( action )* ( rule )+ EOF )
				// NewANTLRv3.g:43:9: ( DOC_COMMENT )? ( 'lexer' | 'parser' | 'tree' | ) g= 'grammar' id ';' ( optionsSpec )? ( tokensSpec )? ( attrScope )* ( action )* ( rule )+ EOF
				{
					root_0 = (CommonTree)adaptor.GetNilNode();

					// NewANTLRv3.g:43:9: ( DOC_COMMENT )?
					int alt1 = 2;
					int LA1_0 = input.LA(1);

					if ( (LA1_0 == DOC_COMMENT) )
					{
						alt1 = 1;
					}
					switch (alt1) 
					{
					case 1 :
						// NewANTLRv3.g:43:9: DOC_COMMENT
					{
						DOC_COMMENT1=(IToken)Match(input,DOC_COMMENT,FOLLOW_DOC_COMMENT_in_grammarDef50); if (state.failed) return retval;
						if ( state.backtracking == 0 )
						{DOC_COMMENT1_tree = (CommonTree)adaptor.Create(DOC_COMMENT1);
							adaptor.AddChild(root_0, DOC_COMMENT1_tree);
						}

					}
						break;

					}

					// NewANTLRv3.g:44:6: ( 'lexer' | 'parser' | 'tree' | )
					int alt2 = 4;
					switch ( input.LA(1) ) 
					{
					case 31:
					{
						alt2 = 1;
					}
						break;
					case 32:
					{
						alt2 = 2;
					}
						break;
					case 33:
					{
						alt2 = 3;
					}
						break;
					case 34:
					{
						alt2 = 4;
					}
						break;
					default:
						if ( state.backtracking > 0 ) {state.failed = true; return retval;}
						NoViableAltException nvae_d2s0 =
							new NoViableAltException("", 2, 0, input);

						throw nvae_d2s0;
					}

					switch (alt2) 
					{
					case 1 :
						// NewANTLRv3.g:44:8: 'lexer'
					{
						string_literal2=(IToken)Match(input,31,FOLLOW_31_in_grammarDef60); if (state.failed) return retval;
						if ( state.backtracking == 0 )
						{string_literal2_tree = (CommonTree)adaptor.Create(string_literal2);
							adaptor.AddChild(root_0, string_literal2_tree);
						}
						if ( (state.backtracking==0) )
						{
						}

					}
						break;
					case 2 :
						// NewANTLRv3.g:45:10: 'parser'
					{
						string_literal3=(IToken)Match(input,32,FOLLOW_32_in_grammarDef78); if (state.failed) return retval;
						if ( state.backtracking == 0 )
						{string_literal3_tree = (CommonTree)adaptor.Create(string_literal3);
							adaptor.AddChild(root_0, string_literal3_tree);
						}
						if ( (state.backtracking==0) )
						{
						}

					}
						break;
					case 3 :
						// NewANTLRv3.g:46:10: 'tree'
					{
						string_literal4=(IToken)Match(input,33,FOLLOW_33_in_grammarDef94); if (state.failed) return retval;
						if ( state.backtracking == 0 )
						{string_literal4_tree = (CommonTree)adaptor.Create(string_literal4);
							adaptor.AddChild(root_0, string_literal4_tree);
						}
						if ( (state.backtracking==0) )
						{
						}

					}
						break;
					case 4 :
						// NewANTLRv3.g:47:14: 
					{
						if ( (state.backtracking==0) )
						{
						}

					}
						break;

					}

					g=(IToken)Match(input,34,FOLLOW_34_in_grammarDef135); if (state.failed) return retval;
					if ( state.backtracking == 0 )
					{g_tree = (CommonTree)adaptor.Create(g);
						adaptor.AddChild(root_0, g_tree);
					}
					PushFollow(FOLLOW_id_in_grammarDef137);
					id5 = id();
					state.followingStackPointer--;
					if (state.failed) return retval;
					if ( state.backtracking == 0 ) adaptor.AddChild(root_0, id5.Tree);
					char_literal6=(IToken)Match(input,35,FOLLOW_35_in_grammarDef139); if (state.failed) return retval;
					if ( state.backtracking == 0 )
					{char_literal6_tree = (CommonTree)adaptor.Create(char_literal6);
						adaptor.AddChild(root_0, char_literal6_tree);
					}
					// NewANTLRv3.g:49:25: ( optionsSpec )?
					int alt3 = 2;
					int LA3_0 = input.LA(1);

					if ( (LA3_0 == OPTIONS) )
					{
						alt3 = 1;
					}
					switch (alt3) 
					{
					case 1 :
						// NewANTLRv3.g:49:25: optionsSpec
					{
						PushFollow(FOLLOW_optionsSpec_in_grammarDef141);
						optionsSpec7 = optionsSpec();
						state.followingStackPointer--;
						if (state.failed) return retval;
						if ( state.backtracking == 0 ) adaptor.AddChild(root_0, optionsSpec7.Tree);

					}
						break;

					}

					// NewANTLRv3.g:49:38: ( tokensSpec )?
					int alt4 = 2;
					int LA4_0 = input.LA(1);

					if ( (LA4_0 == TOKENS) )
					{
						alt4 = 1;
					}
					switch (alt4) 
					{
					case 1 :
						// NewANTLRv3.g:49:38: tokensSpec
					{
						PushFollow(FOLLOW_tokensSpec_in_grammarDef144);
						tokensSpec8 = tokensSpec();
						state.followingStackPointer--;
						if (state.failed) return retval;
						if ( state.backtracking == 0 ) adaptor.AddChild(root_0, tokensSpec8.Tree);

					}
						break;

					}

					// NewANTLRv3.g:49:50: ( attrScope )*
					do 
					{
						int alt5 = 2;
						int LA5_0 = input.LA(1);

						if ( (LA5_0 == 38) )
						{
							alt5 = 1;
						}


						switch (alt5) 
						{
						case 1 :
							// NewANTLRv3.g:49:50: attrScope
						{
							PushFollow(FOLLOW_attrScope_in_grammarDef147);
							attrScope9 = attrScope();
							state.followingStackPointer--;
							if (state.failed) return retval;
							if ( state.backtracking == 0 ) adaptor.AddChild(root_0, attrScope9.Tree);

						}
							break;

						default:
							goto loop5;
						}
					} while (true);

					loop5:
					;	// Stops C# compiler whining that label 'loop5' has no statements

					// NewANTLRv3.g:49:61: ( action )*
					do 
					{
						int alt6 = 2;
						int LA6_0 = input.LA(1);

						if ( (LA6_0 == 39) )
						{
							alt6 = 1;
						}


						switch (alt6) 
						{
						case 1 :
							// NewANTLRv3.g:49:61: action
						{
							PushFollow(FOLLOW_action_in_grammarDef150);
							action10 = action();
							state.followingStackPointer--;
							if (state.failed) return retval;
							if ( state.backtracking == 0 ) adaptor.AddChild(root_0, action10.Tree);

						}
							break;

						default:
							goto loop6;
						}
					} while (true);

					loop6:
					;	// Stops C# compiler whining that label 'loop6' has no statements

					// NewANTLRv3.g:50:6: ( rule )+
					int cnt7 = 0;
					do 
					{
						int alt7 = 2;
						int LA7_0 = input.LA(1);

						if ( (LA7_0 == DOC_COMMENT || LA7_0 == TOKEN_REF || LA7_0 == RULE_REF || (LA7_0 >= 42 && LA7_0 <= 45)) )
						{
							alt7 = 1;
						}


						switch (alt7) 
						{
						case 1 :
							// NewANTLRv3.g:50:6: rule
						{
							PushFollow(FOLLOW_rule_in_grammarDef158);
							rule11 = rule();
							state.followingStackPointer--;
							if (state.failed) return retval;
							if ( state.backtracking == 0 ) adaptor.AddChild(root_0, rule11.Tree);

						}
							break;

						default:
							if ( cnt7 >= 1 ) goto loop7;
							if ( state.backtracking > 0 ) {state.failed = true; return retval;}
							EarlyExitException eee7 =
								new EarlyExitException(7, input);
							throw eee7;
						}
						cnt7++;
					} while (true);

					loop7:
					;	// Stops C# compiler whining that label 'loop7' has no statements

					EOF12=(IToken)Match(input,EOF,FOLLOW_EOF_in_grammarDef166); if (state.failed) return retval;
					if ( state.backtracking == 0 )
					{EOF12_tree = (CommonTree)adaptor.Create(EOF12);
						adaptor.AddChild(root_0, EOF12_tree);
					}

				}

				retval.Stop = input.LT(-1);

				if ( (state.backtracking==0) )
				{	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
					adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
			}
			catch (RecognitionException re) 
			{
				ReportError(re);
				Recover(input,re);
				// Conversion of the second argument necessary, but harmless
				retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

			}
			finally 
			{
			}
			return retval;
		}
		// $ANTLR end "grammarDef"

		public class tokensSpec_return : ParserRuleReturnScope
		{
			private CommonTree tree;
			override public object Tree
			{
				get { return tree; }
				set { tree = (CommonTree) value; }
			}
		};

		// $ANTLR start "tokensSpec"
		// NewANTLRv3.g:54:1: tokensSpec : TOKENS ( tokenSpec )+ '}' ;
		public NewANTLRv3Parser.tokensSpec_return tokensSpec() // throws RecognitionException [1]
		{   
			NewANTLRv3Parser.tokensSpec_return retval = new NewANTLRv3Parser.tokensSpec_return();
			retval.Start = input.LT(1);

			CommonTree root_0 = null;

			IToken TOKENS13 = null;
			IToken char_literal15 = null;
			NewANTLRv3Parser.tokenSpec_return tokenSpec14 = default(NewANTLRv3Parser.tokenSpec_return);


			CommonTree TOKENS13_tree=null;
			CommonTree char_literal15_tree=null;

			try 
			{
				// NewANTLRv3.g:55:2: ( TOKENS ( tokenSpec )+ '}' )
				// NewANTLRv3.g:55:4: TOKENS ( tokenSpec )+ '}'
				{
					root_0 = (CommonTree)adaptor.GetNilNode();

					TOKENS13=(IToken)Match(input,TOKENS,FOLLOW_TOKENS_in_tokensSpec180); if (state.failed) return retval;
					if ( state.backtracking == 0 )
					{TOKENS13_tree = (CommonTree)adaptor.Create(TOKENS13);
						adaptor.AddChild(root_0, TOKENS13_tree);
					}
					// NewANTLRv3.g:55:11: ( tokenSpec )+
					int cnt8 = 0;
					do 
					{
						int alt8 = 2;
						int LA8_0 = input.LA(1);

						if ( (LA8_0 == TOKEN_REF) )
						{
							alt8 = 1;
						}


						switch (alt8) 
						{
						case 1 :
							// NewANTLRv3.g:55:11: tokenSpec
						{
							PushFollow(FOLLOW_tokenSpec_in_tokensSpec182);
							tokenSpec14 = tokenSpec();
							state.followingStackPointer--;
							if (state.failed) return retval;
							if ( state.backtracking == 0 ) adaptor.AddChild(root_0, tokenSpec14.Tree);

						}
							break;

						default:
							if ( cnt8 >= 1 ) goto loop8;
							if ( state.backtracking > 0 ) {state.failed = true; return retval;}
							EarlyExitException eee8 =
								new EarlyExitException(8, input);
							throw eee8;
						}
						cnt8++;
					} while (true);

					loop8:
					;	// Stops C# compiler whining that label 'loop8' has no statements

					char_literal15=(IToken)Match(input,36,FOLLOW_36_in_tokensSpec185); if (state.failed) return retval;
					if ( state.backtracking == 0 )
					{char_literal15_tree = (CommonTree)adaptor.Create(char_literal15);
						adaptor.AddChild(root_0, char_literal15_tree);
					}

				}

				retval.Stop = input.LT(-1);

				if ( (state.backtracking==0) )
				{	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
					adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
			}
			catch (RecognitionException re) 
			{
				ReportError(re);
				Recover(input,re);
				// Conversion of the second argument necessary, but harmless
				retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

			}
			finally 
			{
			}
			return retval;
		}
		// $ANTLR end "tokensSpec"

		public class tokenSpec_return : ParserRuleReturnScope
		{
			private CommonTree tree;
			override public object Tree
			{
				get { return tree; }
				set { tree = (CommonTree) value; }
			}
		};

		// $ANTLR start "tokenSpec"
		// NewANTLRv3.g:58:1: tokenSpec : TOKEN_REF ( '=' (lit= STRING_LITERAL | lit= CHAR_LITERAL ) | ) ';' ;
		public NewANTLRv3Parser.tokenSpec_return tokenSpec() // throws RecognitionException [1]
		{   
			NewANTLRv3Parser.tokenSpec_return retval = new NewANTLRv3Parser.tokenSpec_return();
			retval.Start = input.LT(1);

			CommonTree root_0 = null;

			IToken lit = null;
			IToken TOKEN_REF16 = null;
			IToken char_literal17 = null;
			IToken char_literal18 = null;

			CommonTree lit_tree=null;
			CommonTree TOKEN_REF16_tree=null;
			CommonTree char_literal17_tree=null;
			CommonTree char_literal18_tree=null;

			try 
			{
				// NewANTLRv3.g:59:2: ( TOKEN_REF ( '=' (lit= STRING_LITERAL | lit= CHAR_LITERAL ) | ) ';' )
				// NewANTLRv3.g:59:4: TOKEN_REF ( '=' (lit= STRING_LITERAL | lit= CHAR_LITERAL ) | ) ';'
				{
					root_0 = (CommonTree)adaptor.GetNilNode();

					TOKEN_REF16=(IToken)Match(input,TOKEN_REF,FOLLOW_TOKEN_REF_in_tokenSpec196); if (state.failed) return retval;
					if ( state.backtracking == 0 )
					{TOKEN_REF16_tree = (CommonTree)adaptor.Create(TOKEN_REF16);
						adaptor.AddChild(root_0, TOKEN_REF16_tree);
					}
					// NewANTLRv3.g:60:3: ( '=' (lit= STRING_LITERAL | lit= CHAR_LITERAL ) | )
					int alt10 = 2;
					int LA10_0 = input.LA(1);

					if ( (LA10_0 == 37) )
					{
						alt10 = 1;
					}
					else if ( (LA10_0 == 35) )
					{
						alt10 = 2;
					}
					else 
					{
						if ( state.backtracking > 0 ) {state.failed = true; return retval;}
						NoViableAltException nvae_d10s0 =
							new NoViableAltException("", 10, 0, input);

